# CDP_Coding_Challenge

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  make_and_run_unit_test.sh  make_program.sh
doc/: Coding Test-ver-G.docx
src/: CMakeLists.txt  calculations.c  calculations.h  main.c  packet_constants.h  packet_parser.c  packet_parser.h  state_handler.c  state_handler.h
unit_tests/: CMakeLists.txt  README.md  RunAllTests.cpp  calculations_tests.cpp  packet_parser_tests.cpp  state_handler_tests.cpp
